--- a/BridgeCraneModel.vcxproj
+++ b/BridgeCraneModel.vcxproj
@@ -116,10 +116,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CraneModel\CraneModel.cpp" />
+    <ClCompile Include="CraneModel\ModelOld.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CraneModel\CraneModel.h" />
+    <ClInclude Include="CraneModel\ModelOld.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
