Implementing constant pendulum length model. Trying out derivatives.

--- a/BridgeCraneModel.vcxproj
+++ b/BridgeCraneModel.vcxproj
@@ -115,12 +115,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="CraneModel\CraneModel.cpp" />
+    <ClCompile Include="CraneModel\Model.cpp" />
     <ClCompile Include="CraneModel\ModelOld.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CraneModel\CraneModel.h" />
+    <ClInclude Include="CraneModel\Model.h" />
     <ClInclude Include="CraneModel\ModelOld.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
